fix z-index of users.scss

--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -15,6 +15,7 @@ body {
   background-color: #000;
   overflow-x: hidden;
   padding-top: 20px;
+  z-index: -1;
 }
 
 
@@ -44,7 +45,7 @@ body {
   .sidenav{
       width: 40%;
       position: fixed;
-      z-index: 1;
+      z-index: -1;
       top: 0;
       left: 0;
   }
